Inital work : extraction of sources from CAS SAML 2 plugin. Begin refactoring to improve integration with extension points. Begin designing a single Facade to ease SP usage.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
+*.project
+*.classpath
+*/target
+*/.settings
 *.class
+*.springBeans
+*MANIFEST.MF
+*build.properties
+*/build
 
 # Package Files #
 *.jar
 *.war
 *.ear
+/target
