--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,36 @@
 	<name>SAML2 Service Provider</name>
 
 	<properties>
-		<junit.version>4.7</junit.version>
-		<mockito.version>1.9.0</mockito.version>
+		<slf4j.version>1.7.5</slf4j.version>
+		<opensaml.version>2.5.1-1</opensaml.version>
 		<servlet.api.version>2.5</servlet.api.version>
 		<spring.version>3.0.5.RELEASE</spring.version>
-		<opensaml.version>2.5.1-1</opensaml.version>
+		
+		<junit.version>4.7</junit.version>
+		<mockito.version>1.9.0</mockito.version>
+		<logback.version>1.0.13</logback.version>
 	</properties>
 
 	<dependencies>
-
+	
+	    <dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+		    <version>${slf4j.version}</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
@@ -101,19 +122,14 @@
        		<version>1.0.5</version>
        		<scope>test</scope>
      	</dependency>
-     
+
 		<dependency>
-			<groupId>commons-collections</groupId>
-			<artifactId>commons-collections</artifactId>
-			<version>3.2.1</version>
+		    <groupId>ch.qos.logback</groupId>
+		    <artifactId>logback-classic</artifactId>
+		    <version>${logback.version}</version>
+		    <scope>test</scope>
 		</dependency>
-		
-		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-io</artifactId>
-		    <version>1.3.2</version>
-		</dependency>
-		
+
 	</dependencies>
 
 	<build>
